# chores

./: .gitignore  .project  README.md  chores.cabal
src/: Chores.hs  NextGen.hs
