name:           chores
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         pescuma

executable chores
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers
  ghc-options:     -Wall
  other-modules:   
                   Chores,
                   NextGen

